src/objects/Assignment_Generator_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Assessable_Object_Api__c</fullName>
        <label>Assessable Object Api</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Template</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipLabel>Assignment Generator Batches</relationshipLabel>
        <relationshipName>Assignment_Generator_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Of_Records__c</fullName>
        <label>No Of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assignment Generator Batch</label>
    <nameField>
        <displayFormat>AGB-{0000}</displayFormat>
        <label>Assignment Generator Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Generator Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>